--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "baseUrl": "src",
-    "paths": {
-      "@image/*": ["public/image/*"],
-      "@assets/*": ["public/assets/*"],
-      "@hooks/*": ["public/hooks/*"],
-      "@styles/*": ["styles/*"],
-      "@utils/*": ["public/utils/*"],
-      "@components/*": ["components/*"]
-    },
-
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -30,7 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  "extends": "./tsconfig.paths.json",
+  "include": ["src"]
 }
