[feat] add TodoCard Component and class at Home

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,12 +3,12 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "@image/*": ["public/image/*"],
-      "@assets/*": ["public/assets/*"],
-      "@hooks/*": ["public/hooks/*"],
+      "@image/*": ["src/public/assets/image/*"],
+      "@assets/*": ["src/public/assets/*"],
+      "@hooks/*": ["src/public/hooks/*"],
       "@styles/*": ["styles/*"],
-      "@utils/*": ["public/utils/*"],
-      "@components/*": ["components/*"]
+      "@utils/*": ["src/public/utils/*"],
+      "@components/*": ["src/components/*"]
     }
   }
 }
