--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.1",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-app-alias": "^2.2.2",
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
